...
                KinoTextField(
                    textValue = state.email,
                    onTextChange = onEmailChange,
                    placeholderText = "example@gmail.com",
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("email_input"))

                state.emailError?.let { KinoErrorText(message = it) }
            }

            Spacer(modifier = Modifier.height(KinoSpacing.medium))

            //Password field
            Column{
                Text(
                    text = "Password:",
                    color = KinoYellow
                )
                HorizontalDivider(
                    color = KinoYellow,
                    thickness = 1.dp,
                    modifier = Modifier.padding(
...
                    textValue = state.pass,
                    onTextChange = onPassChange,
                    placeholderText = "Password",
                    isPassword = true,
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("password_input"))

                //Visual feedback to password requirements
                PasswordRequirementsFeedback(state.pass)
            }

            Spacer(modifier = Modifier.height(KinoSpacing.medium))
...
                                .weight(1f)
                                .height(48.dp),
                            contentAlignment = Alignment.Center)
                        { CircularProgressIndicator(color = KinoYellow) }
                    } else {
                        KinoButton(
                            text = "Create Account",
                            onClick = onRegisterClick,
                            modifier = Modifier.weight(1.5f))
                    }

                    KinoButton(
                        text = "Cancel",
...
